--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,14 +11,18 @@
 
     <div class="main">
         <h1>Rob's Random Password Generator</h1>
-        <div id="password">
-            This is where the password will display
-        </div>
         <div id="pass-settings">
-            put in an input box for length
-            check boxes for include symbols
-            and include special characters
+            <label for="length">Length</label>
+            <input type="text" id="length" value="16" maxlength="3" size="2" />
+            <label for="numbers">Include Numbers</label>
+            <input type="checkbox" id="numbers" checked />
+            <label for="symbols">Include Symbols</label>
+            <input type="checkbox" id="Symbols" checked />
         </div>
+        <div id="password">
+            <input type="text" id="password" placeholder="Generated Password" /> <button id="copy">Copy</button>
+        </div>
+
 
     </div>
     
