--- a/index.html
+++ b/index.html
@@ -11,19 +11,28 @@
 
     <div class="main">
         <h1>Rob's Random Password Generator</h1>
+
         <div id="pass-settings">
-            <label for="length">Length</label>
-            <input type="text" id="length" value="16" maxlength="3" size="2" />
-            <label for="numbers">Include Numbers</label>
-            <input type="checkbox" id="numbers" checked />
-            <label for="symbols">Include Symbols</label>
-            <input type="checkbox" id="Symbols" checked />
-        </div>
-        <div id="password">
-            <input type="text" id="password" placeholder="Generated Password" /> <button id="copy">Copy</button>
+            <label>
+            Length (8-128) <input type="text" id="length" value="16" maxlength="3" size="2">
+            </label>
+
+            <label>
+            <input type="checkbox" id="numbers" checked> Include Numbers?
+            </label>
+
+            <label>
+            <input type="checkbox" id="symbols" checked> Include Symbols?
+            </label>
         </div>
 
+        <div class="generate">
+            <input type="button" id="generate-button" value="Generate Password"/>
+        </div>
 
+        <div class="password">
+            <input type="text" id="password-text" placeholder="Generated Password"/> <input type="button" id="copy" value="Copy" />
+        </div>
     </div>
     
  <script src="assets/js/pass.js"></script>
